front-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
  labels:
    app: front-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
        - name: front-service
          image: 297195401389.dkr.ecr.ap-northeast-2.amazonaws.com/zapp/react-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
