front-service/k8s/front-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-nginx
  namespace: service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: front-nginx
